--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </ul>
       </nav>
       <div class="newposter">
-        <h1 class="headerh1">are you ok</h1>
+        <h1 class="headerh1">ahahahahah</h1>
 
         <div class="button">
           <button class="submit" type="submit">GO NOW</button>
