--- a/index.html
+++ b/index.html
@@ -254,10 +254,10 @@
 
         <div class="addr">
           Location<br />
-          at post karjal <br />
-          tal akkalkot<br />
-          dist solapur <br />
-          maharashtra , india
+          the one tower<br />
+          dubai interet city<br />
+          floor 46<br />
+          UAE
         </div>
       </div>
       <hr />
