gallary from rudra into header

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ul class="navlinks">
           <li><a href="" class="hoverl link-active">Home</a></li>
           <li><a href="" class="hoverl">greatest deals</a></li>
-          <li><a href="" class="hoverl">zindagi</a></li>
+          <li><a href="" class="hoverl">gallary</a></li>
           <li><a href="" class="hoverl">past products</a></li>
           <li class="btn" class="hoverl">signin</li>
           <li class="btn" class="hoverl">Register</li>
